! fixed wrong client icons - thx to SS1900 [WiZaRd]
! fixed (wrong) disabled 7z controls [WiZaRd]
~ added .apk support [Tuxman]
! fixed possibly buffer overflow in statistics - thx to RejZoR [WiZaRd]
! switched "compatible" and "default" client icons [WiZaRd]
! fixed crash on automatic extraction - thx to satanius [WiZaRd]

XXXXYYZZ:
> updated miniupnplib support to v1.8 (03/05/2013) [Tuxman/WiZaRd]
! fixed duplicated badguy icons caused by modicons - thx to SS1900 [WiZaRd]
! fixed kMule version display in stats [WiZaRd]
! fixed iSOTN [WiZaRd]
+ added file & client availability (health) display - original by Morph4u (?) [WiZaRd]
+ added SCT - original by Netfinity [WiZaRd]
+ added modprot support [WiZaRd]
 * includes LowID UDP Ping support
+ added QOS support - original by Netfinity [WiZaRd]
+ added DesktopIntegration for even better WINE support - original by Netfinity [WiZaRd]
+ added info window with logs [WiZaRd]
~ kMule will now try different settings if the default shared usage setting fails to create all necessary folders [WiZaRd]
! fixed problem with race conditions on startup which could cause kMule not to connect when using the first start wizard [WiZaRd]
+ added NAT-T support - original by David Xanatos [WiZaRd]
+ added Clipboard Watchdog [Tuxman]
 * provides a more elegant way to watch the clipboard for eD2k links
+ added the eD2k LinkCreator to the Tools menu [Tuxman]
~ added temporary DownThemAll! downloads to known partial files [Tuxman]
+ automatic priorities are more flexible now and also set VERYLOW and VERYHIGH states [WiZaRd]
+ added extendedXS support - original by David Xanatos [WiZaRd]
+ added basic IPv6 support - original by David Xanatos [WiZaRd]
+ added "About kMule" page to options with information and donation possibility [WiZaRd]
+ added additional CA icons, depending on the CA status/score [WiZaRd]
 * red skull: very bad
 * black skull: bad
 * blue skull: nice score (>1.0 - 2.0)
 * green skull: good score (> 2.0)